Change MangaKakalot title to use the image alt tag since they are doing some weird parsing on the @ symbol in the name

--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "extensions",
+  "name": "groovin",
   "version": "1.0.0",
-  "description": "Additional sources for Paperback",
+  "description": "The best sources for paperback 😎",
   "scripts": {
     "start": "tsc && node dist/api.js",
     "build": "tsc",
-    "test": "node_modules/.bin/mocha --timeout 300000 -r ts-node/register src/**/*.test.ts",
+    "test": "./node_modules/.bin/mocha --timeout 300000 -r ts-node/register src/**/*.test.ts",
     "coverage": "nyc -r lcov -e .ts -x \"*.test.ts\" npm run test",
     "bundle": "paperback bundle",
     "serve": "paperback serve -p 8000"
